# estebanchess.local

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chess_move_analyzer/: __init__.py  __main__.py  accuracy_board.py  accuracy_engine.py  accuracy_models.py  accuracy_pgn_index.py  accuracy_position_selector.py  accuracy_scoring.py  accuracy_session.py  accuracy_sources.py  accuracy_storage.py  accuracy_ui.py  analysis.py  app.py  board_view.py  chesscom.py  engine.py  models.py  pgn_utils.py  pv.py  storage.py
docker/: entrypoint.sh
scripts/: install_stockfish_linux.sh  install_stockfish_windows.ps1
tests/: test_accuracy_board.py  test_accuracy_engine.py  test_accuracy_pgn_index.py  test_accuracy_position_selector.py  test_accuracy_scoring.py  test_accuracy_session.py  test_accuracy_sources.py  test_accuracy_storage.py  test_accuracy_ui.py  test_analysis.py  test_app.py  test_board_view.py  test_chesscom.py  test_engine.py  test_pgn_utils.py  test_pv.py  test_storage.py
